--- a/OpenMarket/OpenMarket/Supporting Files/Info.plist
+++ b/OpenMarket/OpenMarket/Supporting Files/Info.plist
@@ -58,5 +58,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>사진 촬영을 위해 카메라에 접근해도 될까요?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진을 가져오기 위해 사진첩에 접근해도 될까요?</string>
 </dict>
 </plist>
