test: MarketItemListViewModel test 추가
Fixes: #11

--- a/OpenMarket/OpenMarket.xcodeproj/xcshareddata/xcschemes/OpenMarket.xcscheme
+++ b/OpenMarket/OpenMarket.xcodeproj/xcshareddata/xcschemes/OpenMarket.xcscheme
@@ -27,7 +27,16 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AAAD849926D9952400B23520"
+            BuildableName = "OpenMarket.app"
+            BlueprintName = "OpenMarket"
+            ReferencedContainer = "container:OpenMarket.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
